--- a/view/leftmenuview.html
+++ b/view/leftmenuview.html
@@ -5,10 +5,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#" >Dashboard</a>
                 </li>
                 <li>
-                    <span data-bind="click: onRegistrationItemClick">Регистрация</span>
+                    <a href="#" data-bind="click: showRegistrationView">Регистрация</a>
                 </li>
                 <li>
                     <a href="#">Виджеты</a>
