adding create_widget_view.html

--- a/view/leftmenuview.html
+++ b/view/leftmenuview.html
@@ -14,7 +14,7 @@
                     <a href="#">Виджеты</a>
                 </li>
                 <li>
-                    <a href="#">Создать виджет</a>
+                    <a href="#" data-bind="click: showCreateWidgetView">Создать виджет</a>
                 </li>
                 <li>
                     <a href="#">Настройки</a>
