--- a/view/create_widget_view.html
+++ b/view/create_widget_view.html
@@ -7,11 +7,13 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-12">
-            <button id="btnCreateWidget" type="button" class="btn btn-primary">Создать виджет</button>
+            <button id="btnCreateWidget" data-bind="click:createWidget" type="button" class="btn btn-primary">Создать виджет</button>
         </div>
     </div>
 </form>
 
 <script src="/viewmodel/widgetvm.js">
-ko.applyBindings(rssmailer.vm.widgetvm, document.getElementById("create_widget_form"));
+</script>
+<script>
+    ko.applyBindings(rssmailer.vm.widget, document.getElementById("create_widget_form"));
 </script>
