--- a/view/leftmenuview.html
+++ b/view/leftmenuview.html
@@ -1,6 +1,6 @@
 ﻿<ul id="leftmenu" class="sidebar-nav">
     <li class="sidebar-brand">
-        <a href="#">
+        <a href="#">cshnsv
                         Start Bootstrap
                     </a>
                 </li>
@@ -11,7 +11,7 @@
                     <a href="#" data-bind="click: showRegistrationView">Регистрация</a>
                 </li>
                 <li>
-                    <a href="#">Виджеты</a>
+                    <a href="#" data-bind="click: showWidgetsView">Виджеты</a>
                 </li>
                 <li>
                     <a href="#" data-bind="click: showCreateWidgetView">Создать виджет</a>
