some changes in widgetsview

--- a/view/widgetsview.html
+++ b/view/widgetsview.html
@@ -25,9 +25,6 @@
     $("#myModal").modal();
 </script>
 
-
-
-
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
@@ -39,7 +36,9 @@
           <h4 class="modal-title">Modal Header</h4>
         </div>
         <div class="modal-body">
-          <p>Some text in the modal.</p>
+          <code>
+                widget's html code
+          </code>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
