Generating widget's html Show Modal Widget

--- a/view/widgetsview.html
+++ b/view/widgetsview.html
@@ -1,4 +1,4 @@
-
+﻿
 <div id="divWidgets">
     <span data-bind="click: showWidget">Click</span>
 <table id="tblWidgets" class="table">
@@ -25,13 +25,12 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title">Код виджета</h4>
         </div>
         <div class="modal-body">
             
-          <textarea style="border:0px;width:100%;overflow:hidden;heigth:auto;">
-                <div id='rssmailer-container' data-widget='180649'></div>
-                <script src='http://rssmailerweb/js/widget_loader.js' async></script>
+          <textarea id="txtWidgetHtml" style="border:0px;width:100%;overflow:hidden;heigth:auto;">
+                
           </textarea>
           
         </div>
