--- a/view/leftmenuview.html
+++ b/view/leftmenuview.html
@@ -1,7 +1,6 @@
 ﻿<ul id="leftmenu" class="sidebar-nav">
     <li class="sidebar-brand">
-        <a href="#">cshnsv
-                        Start Bootstrap
+        <a href="#">RSSMAILER
                     </a>
                 </li>
                 <li>
