--- a/css/widget.css
+++ b/css/widget.css
@@ -1,21 +1,23 @@
-/*----------------------SUBSCRIPTION-----------------------------------*/
-
-
-#subscription .form{
+#rssmailer-container .form{
     padding: 7px;
     
 }
-#subscription .email{
+#rssmailer-container .email{
     height:20px;
     line-height: 20px;
     width:100%;
 }
 
-#subscription .link{
+#rssmailer-container .link{
     margin-top: 14px;
     font-size:12px;
     text-decoration: underline;
     float:left;
+}
+
+#rssmailer-container .result{
+    margin-top: 4px;
+    font-size: 12px;
 }
 
 #btn_subscribe{
@@ -35,5 +37,3 @@
     text-shadow: 0px -1px 0px rgba(000, 000, 000, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.3);
    
 }
-
-/*----------------------END: SUBSCRIPTION-----------------------------------*/ 
