--- a/view/leftmenuview.html
+++ b/view/leftmenuview.html
@@ -13,7 +13,7 @@
                     <a href="#" data-bind="click: showCreateWidgetView">Создать виджет</a>
                 </li>
                 <li>
-                    <a href="#">Настройки</a>
+                    <a href="#" data-bind="click: showCreateLetterView">Создать письмо</a>
                 </li>
                 <!--
                 <li>
