--- a/view/widgetsview.html
+++ b/view/widgetsview.html
@@ -5,7 +5,10 @@
         <tr>
             <th>#</th>
             <th>RSS</th>    
-            <th>GUID</th>    
+            <th>GUID</th>   
+            <th></th>   
+            <th></th>
+            <th></th>    
         </tr>    
     </thead>
     <tbody data-bind="foreach: widgets">
@@ -14,7 +17,10 @@
             <td data-bind="text: rss, click: $parent.showWidget"></td>
             <td data-bind="text: guid"></td>
             <td>Подписчики</td>
-            <td data-bind="click:$parent.showWidgetSettings">Настройки</td>
+            <td><a data-bind="click:$parent.showWidgetSettings">Настройки</a></td>
+            <td>
+                <input type="button" class="btn btn-primary btn-xs" data-bind="click:$parent.create_letter" value="Создать рассылку" />
+            </td>
         </tr>
     </tbody>
 </table>
@@ -36,7 +42,6 @@
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
-      
     </div>
   </div>
 
@@ -86,8 +91,9 @@
     </div>
   </div>
   </div>
-<script src="/viewmodel/widgetvm.js">
-</script>
+  <script src="/viewmodel/lettervm.js"></script>
+<script src="/viewmodel/widgetvm.js"></script>
+
 <script>
     ko.applyBindings(rssmailer.vm.widget, document.getElementById("divWidgets"));
     rssmailer.vm.widget.loadWidgets();
