--- a/view/leftmenuview.html
+++ b/view/leftmenuview.html
@@ -4,17 +4,18 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" >Dashboard</a>
+                    <a href="І" data-bind="click:showNewFeedView">Лента</a>
                 </li>
                 <li>
-                    <a href="#" data-bind="click: showWidgetsView">Виджеты</a>
+                    <a href="#" data-bind="click: showWidgetsView">RSS-ы</a>
                 </li>
                 <li>
-                    <a href="#" data-bind="click: showCreateWidgetView">Создать виджет</a>
+                    <a href="#" data-bind="click: showCreateWidgetView">Добавить RSS</a>
                 </li>
                 <li>
                     <a href="#" data-bind="click: showCreateLetterView">Создать письмо</a>
                 </li>
+                
                 <!--
                 <li>
                     <a href="#">Services</a>
